# pat

./: Cargo.toml  README.md  cli.rs
.github/workflows/: ci.yml
pat/: errors.rs  lib.rs
