[package]
name = "pat"
version = "0.1.0"
edition = "2021"
description = "plist cat"
readme = "README.md"
authors = ["Gabriel DeMoura <gabrielteratos@gmail.com>"]
homepage = "https://github.com/gabrielfalcao/pat"
license = "MIT"
autoexamples = false
autobenches = false

[lib]
name = "pat"
path = "pat/lib.rs"

doctest = false
bench = false

[[bin]]
name = "pat"
path = "./cli.rs"
doctest = false
bench = false
doc = false

[dependencies]
clap = { version = "4.5.35", features = ["derive", "env", "string", "unicode", "wrap_help"] }
iocore = "2.0.3"
plist = "1.7.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
